--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,119 @@
+/* GLOBAL */
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+}
+
+body{
+  font-family: Whitney,Helvetica Neue,Helvetica,Arial,sans-serif;
+  font-size: 20px;
+  color: #23272a;
+}
+
+.clearfix::after {
+  content: '';
+  display: table;
+  clear: both;
+}
+
+.container {
+  width: 90%;
+  max-width: 1180px;
+  margin: 0 auto;
+}
+
+.btn {
+  font-size: 14px;
+  color: black;
+  background-color: #fff;
+  padding: 10px 15px;
+  text-decoration: none;
+  border-radius: 40px;
+}
+
+.btn.btn_big {
+  font-size: 18px;
+  padding: 15px 25px;
+}
+
+.btn.btn_black {
+  background-color: #23272A;
+  color: white;
+}
+
+.btn:hover {
+  color: cornflowerblue;
+}
+
+
+/* HEADER */
+header {
+  height: 80px;
+  background-color: #3061E0;
+  line-height: 80px;
+}
+
+.logo img {
+  vertical-align: middle;
+}
+
+.top-menu {
+  width: calc(100% - 202px);
+  text-align: center;
+}
+
+.top-menu ul {
+  list-style: none;
+}
+
+.top-menu ul li, .logo{
+  float: left;
+}
+
+.top-menu ul li {
+  display: inline-block;
+  padding: 0 15px;
+}
+
+.top-menu ul li a {
+  text-decoration: none;
+  color: white;
+  font-size: 16px;
+}
+
+.top-menu ul li a:hover {
+  text-decoration: underline;
+}
+
+#accedi {
+  float: right;
+}
+
+/* JUMBOTRON */
+.jumbotron {
+  height: 547px;
+  background-image: url('../img/jumbo.png');
+  background-size: cover;
+}
+
+.jumbotron .container {
+  max-width: 800px;
+  color: #fff;
+  text-align: center;
+  padding-top: 100px;
+}
+
+.jumbotron h1 {
+  font-size: 54px;
+  margin-bottom: 40px;
+}
+
+.jumbotron p {
+  margin-bottom: 30px;
+  line-height: 38px;
+}
+
+.jumbotron .container .btn.btn_black {
+  margin-left: 30px;
 }
