--- a/css/style.css
+++ b/css/style.css
@@ -256,6 +256,15 @@ footer .footer-content .footer-left i {
   padding-right: 10px;
 }
 
+footer .footer-content .footer-right ul li a {
+  text-decoration: none;
+  color: #fff;
+}
+
+footer .footer-content .footer-right ul li a:hover {
+  text-decoration: underline;
+}
+
 .footer-bottom {
   border-top: 2px solid #8EA1E2;
 }
@@ -268,4 +277,8 @@ footer .footer-content .footer-left i {
 .footer-bottom .btn.btn_blue {
   display: inline-block;
   text-align: right;
+}
+
+.footer-bottom .btn.btn_blue:hover {
+  cursor: pointer;
 }
