--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ section.main-content img#mage-voice-connected {
 /* FOOTER */
 footer {
   background-color: #23272A;
-  padding-top: 60px;
+  padding-top: 40px;
 }
 
 footer h3 {
@@ -239,7 +239,7 @@ footer .footer-content ul li:first-child {
 }
 
 footer .footer-content {
-  margin-right: 100px;
+  margin: 0 100px auto;
 }
 
 footer .footer-content .footer-left i, footer .footer-content .footer-left span {
@@ -266,16 +266,19 @@ footer .footer-content .footer-right ul li a:hover {
 .footer-bottom {
   margin-top: 50px;
   border-top: 2px solid #8EA1E2;
+  padding-top: 40px;
 }
 
 .footer-bottom .logo img {
-  padding-top: 40px;
   margin-bottom: 80px;
 }
 
 .footer-bottom .btn.btn_blue {
-  display: inline-block;
-  text-align: right;
+  float: right;
+}
+
+.footer-bottom .logo img, .footer-bottom .btn.btn_blue {
+  vertical-align: bottom;
 }
 
 .footer-bottom .btn.btn_blue:hover {
